[tool.poetry]
name = "repl_nix_sp23-recitation-02-mirandad03-2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
matplotlib = "^3.6.3"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
